--- a/fe/src/app/components/form.component.html
+++ b/fe/src/app/components/form.component.html
@@ -9,7 +9,11 @@
         </span>
     </div>
     <frmdb-form_state [stateGraph]="form?.stateGraph" *ngIf="form?.stateGraph"></frmdb-form_state>
-    <div frmdb-form_item [nodeElement]="form?.grid" [topLevelFormGroup]="theFormGroup" parentFormPath="" [formReadOnly]="formReadOnly"
+    <div frmdb-page_item *ngFor="let child of form?.childNodes" 
+        [nodel]="child" [formgrp]="theFormGroup"
+        [fullpath]="getChildPath(child)" [rdonly]="rdonly"></div>
+    <div frmdb-page_item [nodel]="form?.grid" [formgrp]="theFormGroup" 
+    fullpath="" [rdonly]="rdonly"
          *ngIf="null != form">
     </div>
 </form>
