--- a/fe/src/app/components/form_text/form_text.component.html
+++ b/fe/src/app/components/form_text/form_text.component.html
@@ -2,7 +2,7 @@
 <span *ngIf="representation == '_id'">{{value}}</span>
 <span *ngIf="representation == 'string'">{{value}}</span>
 
-<div *ngIf="representation == 'title'"class="text-center">
+<div *ngIf="representation == 'title'"class="title text-center">
     <h1 >{{value}}</h1>
 </div>
 
