--- a/fe/src/app/components/card_prototype/card_container.component.html
+++ b/fe/src/app/components/card_prototype/card_container.component.html
@@ -1,6 +1,7 @@
 <div class="card-deck">
-    <frmdb-card  *ngFor="let childControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index"
-        [nodeElement]="cardContainer.cardNode" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath + '.' + idx"
-        [formReadOnly]="formReadOnly">
-    </frmdb-card>    
+    <ng-container *ngFor="let childControl of formgrp.get(fullpath)?.controls; let idx = index">
+        <div frmdb-card [nodel]="cardContainer.cardNode" [formgrp]="formgrp" 
+            [fullpath]="fullpath + '.' + idx" [rdonly]="rdonly">
+        </div>
+    </ng-container>
 </div>
