--- a/fe/src/app/components/form_datepicker/form_datepicker.component.html
+++ b/fe/src/app/components/form_datepicker/form_datepicker.component.html
@@ -2,8 +2,8 @@
     {{inputElement.propertyName | i18n}}
     <div class="frmdb-input-dev-mode-label" *ngIf="frmdbStreams.devMode$ | async">{{inputElement.propertyName}}</div>
 </label>
-<ng-container *ngIf="hasControl(parentFormPath)">
+<ng-container *ngIf="hasControl(fullpath)">
     <div class="input-group">
-        <input type="date" class="form-control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" />
+        <input type="date" class="form-control" placeholder="yyyy-mm-dd" [name]="fullpath" [formControl]="formgrp.get(fullpath)" />
     </div>
 </ng-container>
