--- a/fe/src/app/components/grid_row/grid_row.component.html
+++ b/fe/src/app/components/grid_row/grid_row.component.html
@@ -1,6 +1,6 @@
-<ng-container *ngFor="let childEl of nodeElement.childNodes">
+<ng-container *ngFor="let childEl of nodel.childNodes">
   <drop-handle position="before" [item]="childEl" orientation="vertical"></drop-handle>
-  <div frmdb-form_item class="flex-fill" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)"
-    [formReadOnly]="formReadOnly"></div>
+  <div frmdb-page_item [nodel]="childEl" [formgrp]="formgrp" [fullpath]="getChildPath(childEl)"
+    [rdonly]="rdonly"></div>
 </ng-container>
-<drop-handle position="append" *ngIf="nodeElement.childNodes" [item]="nodeElement" orientation="vertical"></drop-handle>
+<drop-handle position="append" *ngIf="nodel.childNodes" [item]="nodel" orientation="vertical"></drop-handle>
