--- a/fe/src/app/themes/light-theme/layout/_landing.scss
+++ b/fe/src/app/themes/light-theme/layout/_landing.scss
@@ -89,6 +89,7 @@ h2{
     top: 0;
     width: 100%;
     z-index: 2;
+    color: white;
 }
 
 .header-wrapper .header .filter[data-color="black"]:after{
