--- a/fe/src/app/themes/material-dashboard-theme/layout/material-dashboard/bootstrap/scss/mixins/_pagination.scss
+++ b/fe/src/app/themes/material-dashboard-theme/layout/material-dashboard/bootstrap/scss/mixins/_pagination.scss
@@ -7,7 +7,7 @@
     line-height: $line-height;
   }
 
-  .page-item {
+  .page_item {
     &:first-child {
       .page-link {
         @include border-left-radius($border-radius);
