--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -1,12 +1,10 @@
-<div class="card-header bg-transparent">
+<!-- <div class="card-header bg-transparent">
   <div class="row align-items-center">
     <div class="col">
       <h6 class="text-uppercase text-muted ls-1 mb-1">card id</h6>
       <h2 class="h3 mb-0">Card Title</h2>
     </div>
   </div>
-</div>
-<div class="card-body">
-  <div frmdb-page_item *ngFor="let child of nodel.childNodes" [nodel]="child" [formgrp]="formgrp"
-    [fullpath]="getChildPath(child)" [rdonly]="rdonly"></div>
+</div> -->
+<div class="card-body" [frmdbPageItems]="nodel.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly">
 </div>
