--- a/fe/src/app/components/form_tabs/form_tabs.component.html
+++ b/fe/src/app/components/form_tabs/form_tabs.component.html
@@ -1,7 +1,7 @@
 <ngb-tabset>
   <ngb-tab *ngFor="let childControl of formgrp.get(fullpath)?.controls; let idx = index" [title]="tabNames[idx]">
     <ng-template ngbTabContent>
-      <div frmdb-page_item [nodel]="nodel.childNodes[0]" [formgrp]="formgrp" [fullpath]="fullpath + '.' + idx"
+      <div [frmdbPageItems]="[nodel.childNodes[0]]" [formgrp]="formgrp" [fullpath]="fullpath + '.' + idx"
         [rdonly]="rdonly"></div>
     </ng-template>
   </ngb-tab>
