--- a/fe/src/app/components/jumbotron/jumbotron.component.html
+++ b/fe/src/app/components/jumbotron/jumbotron.component.html
@@ -1,4 +1,1 @@
-<div>
-  <div *ngFor="let child of nodel.childNodes" frmdb-page_item [nodel]="child" [formgrp]="formgrp"
-    [fullpath]="getChildPath(child)" [rdonly]="rdonly"></div>
-</div>
+<div [frmdbPageItems]="nodel.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
