ugly home page working, using local assets

--- a/fe/src/app/components/jumbotron/jumbotron.component.html
+++ b/fe/src/app/components/jumbotron/jumbotron.component.html
@@ -1,1 +1,1 @@
-<div [frmdbPageItems]="nodel.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
+<div [frmdbPageItems]="jumbotron.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
