--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -6,5 +6,6 @@
     </div>
   </div>
 </div> -->
-<div class="card-body" [frmdbPageItems]="nodel.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly">
+<svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+<div class="card-body" [frmdbPageItems]="card.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly">
 </div>
