--- a/fe/src/app/components/header/header.component.html
+++ b/fe/src/app/components/header/header.component.html
@@ -1,3 +1,1 @@
-<p>
-  header works!
-</p>
+<div [frmdbPageItems]="header.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
