#131 not using angular lazy loding modules anymore, will lazy load js+css from angular.json, all custom HTML+classes will be added via js

--- a/fe/src/app/applications/applications.component.html
+++ b/fe/src/app/applications/applications.component.html
@@ -22,14 +22,14 @@
 
   <h1>Example Applications</h1>
   <div id="exampleApps">
-    <a routerLink="/inventory/0" ><frmdb-application imgSrc="assets/templates/inventory.jpg" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
-    <a routerLink="/booking/0" ><frmdb-application imgSrc="assets/templates/booking.jpg" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
-    <a routerLink="/expenses/0" ><frmdb-application imgSrc="assets/templates/expenses.jpg" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
-    <a routerLink="/ticketing/0" ><frmdb-application imgSrc="assets/templates/ticketing.png" appName="Ticketing, Issues" ></frmdb-application></a>
-    <a routerLink="/planning/0" ><frmdb-application imgSrc="assets/templates/planning.jpg" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
-    <a routerLink="/ecommerce/0" ><frmdb-application imgSrc="assets/templates/eCommerce.jpg" appName="Basic eCommerce" ></frmdb-application></a>
-    <a routerLink="/service/0" ><frmdb-application imgSrc="assets/templates/service.jpg" appName="Bike/Car Service" ></frmdb-application></a>
-    <a routerLink="/reporting/0" ><frmdb-application imgSrc="assets/templates/reporting.png" appName="Reporting" ></frmdb-application></a>
+    <a routerLink="/inventory" ><frmdb-application imgSrc="assets/templates/inventory.jpg" appName="Basic Inventory, Single Warehouse" ></frmdb-application></a>
+    <a routerLink="/booking" ><frmdb-application imgSrc="assets/templates/booking.jpg" appName="Booking Items (e.g. rooms, events, cars)" ></frmdb-application></a>
+    <a routerLink="/expenses" ><frmdb-application imgSrc="assets/templates/expenses.jpg" appName="Expenses, Accounts, Transactions, Budgets" ></frmdb-application></a>
+    <a routerLink="/ticketing" ><frmdb-application imgSrc="assets/templates/ticketing.png" appName="Ticketing, Issues" ></frmdb-application></a>
+    <a routerLink="/planning" ><frmdb-application imgSrc="assets/templates/planning.jpg" appName="Planning, Meetings, Sessions" ></frmdb-application></a>
+    <a routerLink="/ecommerce" ><frmdb-application imgSrc="assets/templates/eCommerce.jpg" appName="Basic eCommerce" ></frmdb-application></a>
+    <a routerLink="/service" ><frmdb-application imgSrc="assets/templates/service.jpg" appName="Bike/Car Service" ></frmdb-application></a>
+    <a routerLink="/reporting" ><frmdb-application imgSrc="assets/templates/reporting.png" appName="Reporting" ></frmdb-application></a>
   </div>
 </div>
 
