--- a/fe/src/app/themes/light-theme/frmdb-ly-admin/frmdb-ly-admin.component.html
+++ b/fe/src/app/themes/light-theme/frmdb-ly-admin/frmdb-ly-admin.component.html
@@ -12,7 +12,7 @@
                     <strong style="font-size: 32px">{{page?.brandName}}</strong>
                 </a>
             </div>
-            <frmdb-v_nav class="nav"></frmdb-v_nav>
+            <nav frmdb-v_nav class="nav"></nav>
         </div>
         <div class="sidebar-background" [style.background-image]="'url(' + sidebarImageUrl + ')' "></div>
     </div>
