--- a/fe/src/app/app.component.scss
+++ b/fe/src/app/app.component.scss
@@ -1,12 +1,11 @@
 #frmdb-toggle-dev-mode {
     position: fixed;
-    top: 1px;
-    left: 3px;
-    opacity: 0.7;
+    top: 2px;
+    right: 5px;
+    opacity: 0.5;
     cursor: pointer;
     z-index: 12345;
     border-radius: 2px;
-    box-shadow:  -2px 2px darkgrey;
 }
 
 #frmdb-toggle-dev-mode.dev-mode-on {
