using vanilla bootstrap js

--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -1,3 +1,2 @@
-<frmdb-h_nav></frmdb-h_nav>
-<nav frmdb-v_nav></nav>
-<router-outlet></router-outlet>
+<frmdb-frmdb-ly-admin *ngIf="layout == 'frmdb-frmdb-ly-admin'"></frmdb-frmdb-ly-admin>
+<frmdb-frmdb-ly-cover *ngIf="layout == 'frmdb-ly-cover'"></frmdb-frmdb-ly-cover>
