--- a/fe/src/app/components/h_nav/h_nav.component.html
+++ b/fe/src/app/components/h_nav/h_nav.component.html
@@ -1,35 +1,32 @@
-<nav class="navbar navbar-expand-md fixed-top">
-    <a class="navbar-brand" href="#">Brand</a>
+<a class="navbar-brand" href="#">Brand</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#frmdb-h_nav-id" aria-controls="frmdb-h_nav-id"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+</button>
 
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+<div class="collapse navbar-collapse" id="frmdb-h_nav-id">
 
-        <ul class="nav navbar-nav navbar-right">
-            <ng-container *ngFor="let navItem of navigationItemsTree">
-                <li *ngIf="!navItem.isPureNavGroupingChildren" class="nav-item"><a class="nav-link"
-                        [routerLink]="[navItem.path]">{{navItem.linkName | i18n }}</a>
-                </li>
-                <li *ngIf="navItem.isPureNavGroupingChildren" class="nav-item dropdown" ngbDropdown placement="bottom-right">
-                    <a class="nav-link dropdown-toggle" href="javascript:void(0)" ngbDropdownToggle aria-haspopup="true"
-                        aria-expanded="false">{{navItem.linkName | i18n }}</a>
-                    <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
-                        <a *ngFor="let childNavItem of navItem.children" class="dropdown-item"
-                            [routerLink]="[childNavItem.path]">{{childNavItem.linkName | i18n }}</a>
-                    </div>
-                </li>
-            </ng-container>
-            <li ngbDropdown placement="bottom-right">
-                <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userMenu" ngbDropdownToggle>
-                    <fa-icon [icon]="userIcon"></fa-icon>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu" ngbDropdownMenu>
-                    <a class="dropdown-item" href="javascript:void(0)">{{'Logout' | i18n }}</a>
+    <ul class="nav navbar-nav navbar-right">
+        <ng-container *ngFor="let navItem of navigationItemsTree">
+            <li *ngIf="!navItem.isPureNavGroupingChildren" class="nav-item"><a class="nav-link" [routerLink]="[navItem.path]">{{navItem.linkName | i18n }}</a>
+            </li>
+            <li *ngIf="navItem.isPureNavGroupingChildren" class="nav-item dropdown" >
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)" id="navItem.linkName" aria-haspopup="true"
+                    aria-expanded="false">{{navItem.linkName | i18n }}</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navItem.linkName" >
+                    <a *ngFor="let childNavItem of navItem.children" class="dropdown-item"
+                        [routerLink]="[childNavItem.path]">{{childNavItem.linkName | i18n }}</a>
                 </div>
             </li>
-        </ul>
-    </div>
-</nav>
+        </ng-container>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                <fa-icon [icon]="userIcon"></fa-icon>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                <a class="dropdown-item" href="javascript:void(0)">{{'Logout' | i18n }}</a>
+            </div>
+        </li>
+    </ul>
+</div>
