load/unload of external css works

--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -1,2 +1,2 @@
-<frmdb-frmdb-ly-admin *ngIf="layout == 'frmdb-frmdb-ly-admin'"></frmdb-frmdb-ly-admin>
+<frmdb-frmdb-ly-admin *ngIf="layout == 'frmdb-ly-admin'"></frmdb-frmdb-ly-admin>
 <frmdb-frmdb-ly-cover *ngIf="layout == 'frmdb-ly-cover'"></frmdb-frmdb-ly-cover>
