--- a/fe/src/app/components/table/table.component.html
+++ b/fe/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="mwz-table-wrapper">
+<div class="frmdb-table-wrapper">
     <button (click)="excel()">Excel</button>
     <button (click)="addRow()">Add</button>
     <button (click)="deleteRow()">Delete</button>
