--- a/fe/src/app/components/table/table.component.scss
+++ b/fe/src/app/components/table/table.component.scss
@@ -9,19 +9,16 @@
     position: absolute; 
 }
 
-.mwz-table-placeholder {
-    min-height: 575px; //FIXME: maximum allowed height, percent does not work
-}
 
-.mwz-table-wrapper {
+.frmdb-table-wrapper {
     width: 100%;
-    height: 100%;
+    min-height: 70vh;
     // @include make-col(8);
     // position: fixed;
     // margin-top: .5rem;
 }
 
-.mwz-table-action {
+.frmdb-table-action {
     position: absolute;
     display: block;
     left: 0;
@@ -42,18 +39,18 @@
     height: 100%;
 }
 
-::ng-deep .mwz-table-wrapper .ag-cell {
+::ng-deep .frmdb-table-wrapper .ag-cell {
     line-height: 25px;
     padding-left: 5px;
     padding-right: 5px;
 }
 
-::ng-deep .mwz-table-wrapper .ag-header .ag-header-cell {
+::ng-deep .frmdb-table-wrapper .ag-header .ag-header-cell {
     font-weight: bold;
     padding-left: 5px;
     padding-right: 5px;
 }
 
-::ng-deep .mwz-table-wrapper .ag-theme-balham .ag-root {
+::ng-deep .frmdb-table-wrapper .ag-theme-balham .ag-root {
     border: 0px;
 }
