--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -55,12 +55,15 @@
                     <fa-icon [icon]="layoutIcon" class="fa-sm"></fa-icon>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80" src="assets/light.jpg" />
-                        Light Theme</a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="60" width="80" src="assets/material.jpg" />
-                        Material Theme</a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="assets/nowui.jpg" />
-                        NowUI Theme</a>
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme('')"><img height="60" width="80" src="assets/img/themes/basic.png" />
+                        Basic</a>
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80" src="assets/img/themes/light.jpg" />
+                        Light</a>
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme('/assets/material-dashboard-theme/material-dashboard.min.css')"><img
+                            height="60" width="80" src="assets/img/themes/material.jpg" />
+                        Material</a>
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="assets/img/themes/nowui.jpg" />
+                        NowUI</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
