filter themes based on look&feel

--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -4,4 +4,9 @@
     .navbar.fixed-top {
         z-index: 1031;
     }
+
+    .frmdb-theme-dropdown .dropdown-item {
+        width: auto;
+        display: inline-block;
+    }
 }
