--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -54,16 +54,36 @@
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <fa-icon [icon]="layoutIcon" class="fa-sm"></fa-icon>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme('')"><img height="60" width="80" src="assets/img/themes/basic.png" />
-                        Basic</a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80" src="assets/img/themes/light.jpg" />
-                        Light</a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme('/assets/material-dashboard-theme/material-dashboard.min.css')"><img
-                            height="60" width="80" src="assets/img/themes/material.jpg" />
-                        Material</a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="assets/img/themes/nowui.jpg" />
-                        NowUI</a>
+                <div class="dropdown-menu dropdown-menu-right frmdb-theme-dropdown" aria-labelledby="dropdown01" style="width: 75vw; text-align: center">
+                    <div class="row">
+                        <div class="col-md-2" style="position: relative; font-weight: bold">
+                            <span style="position: absolute; top: calc(50% - 0.5em)">Look</span>
+                        </div>
+                        <div class="col-md-10" style="display: flex; flex-wrap: wrap;">
+                            <div class="form-check form-check-inline" style="flex: 1 0 0" *ngFor="let look of objectKeys(looks)">
+                                <input class="form-check-input" type="checkbox" [id]="look" [(ngModel)]="looks[look]">
+                                <label class="form-check-label" [for]="look">{{look | i18n}}</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <div class="row">
+                        <div class="col-md-2" style="position: relative; font-weight: bold">
+                            <span style="position: absolute; top: -10px">&nbsp;&nbsp;&</span>
+                            <span style="position: absolute; top: calc(50% - 0.5em)">Feel</span>
+                        </div>
+                        <div class="col-md-10" style="display: flex; flex-wrap: wrap;">
+                            <div class="form-check form-check-inline" style="flex: 1 0 0" *ngFor="let layout of objectKeys(layouts)">
+                                <input class="form-check-input" type="checkbox" [id]="layout" [(ngModel)]="layouts[layout]">
+                                <label class="form-check-label" [for]="layout">{{layout | i18n}}</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" *ngFor="let theme of themes" href="javascript:void(0)">
+                        <img height="100" width="125" [src]="theme.img" (click)="switchTheme(theme.css)" />
+                        <br />{{theme.name}} {{theme.layout | i18n}} {{theme.look | i18n}}
+                    </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
