--- a/fe/src/app/components/frmdb-ly-admin/frmdb-ly-admin.component.html
+++ b/fe/src/app/components/frmdb-ly-admin/frmdb-ly-admin.component.html
@@ -1,4 +1,4 @@
-<nav frmdb-h_nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap navbar-expand-md p-0 shadow"></nav>
+<nav frmdb-h_nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap navbar-expand-md p-0 shadow frmdb-fixed-top-0"></nav>
 <div class="container-fluid">
     <div class="row">
         <nav frmdb-v_nav class="col-md-2 d-none d-md-block bg-light sidebar">
