--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -3,6 +3,8 @@
 
     .navbar.fixed-top {
         z-index: 1031;
+        box-shadow: 0 1rem 2rem rgba(234,88,72,.15) !important;
+        background-color: rgb(234,88,72) !important;
     }
 
     .frmdb-theme-dropdown .dropdown-item {
