--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -39,7 +39,7 @@
                         </span>
                         <input style="width: 25ch" #columnName type="text" (click)="stopPropagation($event)" placeholder="new_column_name" />
                     </a>
-                    <div class="divider"></div>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="javascript:void(0)" (click)="delTable()">
                         <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
                         {{'del table' | i18n}} {{currentEntity?._id}}
@@ -59,8 +59,8 @@
                         <div class="col-md-2" style="position: relative; font-weight: bold">
                             <span style="position: absolute; top: calc(50% - 0.5em)">Look</span>
                         </div>
-                        <div class="col-md-10" style="display: flex; flex-wrap: wrap;">
-                            <div class="form-check form-check-inline" style="flex: 1 0 0" *ngFor="let look of objectKeys(looks)">
+                        <div class="col-md-10 frmdb-look-filters">
+                            <div class="form-check form-check-inline" *ngFor="let look of objectKeys(looks)">
                                 <input class="form-check-input" type="checkbox" [id]="look" [(ngModel)]="looks[look]">
                                 <label class="form-check-label" [for]="look">{{look | i18n}}</label>
                             </div>
@@ -72,18 +72,20 @@
                             <span style="position: absolute; top: -10px">&nbsp;&nbsp;&</span>
                             <span style="position: absolute; top: calc(50% - 0.5em)">Feel</span>
                         </div>
-                        <div class="col-md-10" style="display: flex; flex-wrap: wrap;">
-                            <div class="form-check form-check-inline" style="flex: 1 0 0" *ngFor="let layout of objectKeys(layouts)">
+                        <div class="col-md-10 frmdb-layout-filters">
+                            <div class="form-check form-check-inline" *ngFor="let layout of objectKeys(layouts)">
                                 <input class="form-check-input" type="checkbox" [id]="layout" [(ngModel)]="layouts[layout]">
                                 <label class="form-check-label" [for]="layout">{{layout | i18n}}</label>
                             </div>
                         </div>
                     </div>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" *ngFor="let theme of themes" href="javascript:void(0)">
-                        <img height="150" width="200" [src]="theme.img" (click)="switchTheme(theme.css)" />
-                        <br />{{theme.name}} / {{theme.layout | i18n}} / {{theme.look | i18n}}
-                    </a>
+                    <div class="frmdb-themes">
+                        <a class="dropdown-item" *ngFor="let theme of themes" href="javascript:void(0)">
+                            <img height="150" width="200" [src]="theme.img" (click)="switchTheme(theme.css)" />
+                            <br />{{theme.name}} / {{theme.layout | i18n}} / {{theme.look | i18n}}
+                        </a>
+                    </div>
                 </div>
             </li>
             <li class="nav-item dropdown">
