--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -10,11 +10,16 @@
     .frmdb-theme-dropdown .dropdown-item {
         width: auto;
         display: inline-block;
+
+        .frmdb-themes .frmdb-theme {
+            cursor: pointer;
+        }        
     }
+
 
     .frmdb-themes {
         display: inline-grid;
-        grid-template-columns: auto;
+        grid-template-columns: auto auto;
     }
     .frmdb-look-filters {
         display: inline-grid;
@@ -27,24 +32,24 @@
 
     @media (min-width: 450px) {
         .frmdb-themes {
-            grid-template-columns: auto auto;
+            grid-template-columns: auto auto auto;
         }
         .frmdb-look-filters {
             grid-template-columns: auto auto auto;
         }
         .frmdb-layout-filters {
-            grid-template-columns: auto auto auto;
+            grid-template-columns: auto auto auto ;
         }
     }
     @media (min-width: 1200px) {
         .frmdb-themes {
-            grid-template-columns: auto auto auto;
+            grid-template-columns: auto auto auto auto;
         }
         .frmdb-look-filters {
             grid-template-columns: auto auto auto auto;
         }
         .frmdb-layout-filters {
-            grid-template-columns: auto auto auto auto;
+            grid-template-columns: auto auto auto auto ;
         }
     }
 }
