--- a/fe/src/app/components/ly_cover/ly_cover.component.html
+++ b/fe/src/app/components/ly_cover/ly_cover.component.html
@@ -1,7 +1,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand">Cover</h3>
+    <div class="inner" *ngIf="hNav">
+      <h3 class="masthead-brand">{{brandName}}</h3>
       <nav frmdb-h_nav class="nav nav-masthead justify-content-center">
       </nav>
     </div>
@@ -12,6 +12,9 @@
   </main>
 
   <footer class="mastfoot mt-auto">
+    <nav frmdb-v_nav class="nav bg-none">
+    </nav>
+
     <div class="inner">
       <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
     </div>
