--- a/fe/src/app/components/page/page.component.html
+++ b/fe/src/app/components/page/page.component.html
@@ -1,2 +1,2 @@
-<frmdb-frmdb-ly-admin *ngIf="layout == 'frmdb-ly-admin'"></frmdb-frmdb-ly-admin>
-<frmdb-frmdb-ly-cover *ngIf="layout == 'frmdb-ly-cover'"></frmdb-frmdb-ly-cover>
+<frmdb-ly_admin *ngIf="page?.layout == 'ly_admin'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_admin>
+<frmdb-ly_cover *ngIf="page?.layout == 'ly_cover'" [brandName]="page?.brandName" [logoUrl]="page?.logoUrl"></frmdb-ly_cover>
